更新模型计算

--- a/模型.md
+++ b/模型.md
@@ -18,3 +18,6 @@ H —为烟囱高度
 
 ### 地面点源扩散
 ![](https://gitee.com/passing92/markdown-pic-kit/raw/master/images/PM7K9E.png)
+
+计算模型包含：池火灾、水平方向喷射火、容器爆炸、蒸汽云爆炸、高斯烟羽、高斯烟团
+使用ModelUtil 计算一个空间点周围72个点的气体浓度、辐射情况等
